# Real-Time-Edge-Detection-Viewer

./: README.md
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgedetection/: Camera2Helper.kt  MainActivity.kt  NativeBridge.kt  YuvUtils.kt
app/src/main/res/layout/: activity_main.xml
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: viewer.ts
